final code review

--- a/about.html
+++ b/about.html
@@ -49,8 +49,8 @@
 	</header>
 	<main>
 		<div class="container-fluid about-container">
-			<section class="container frame--main">
-				<div class="row justify-content-center about-us">
+			<section class="container">
+				<div class="row justify-content-center frame--main about-us">
 					<div class="col-12 about-heading">
 						<h2>Our instructors</h2>
 					</div>
@@ -95,16 +95,14 @@
 						    <img src="assets/img/john.jpg" alt="John photo" title="John"/>
 					    </div>
 				    </div>
-				    <div class="row justify-content-center frame--info learn-more">
-					    <div class="col-10">
-						    <p>
-							    Would you like to know more about our instructors or about Positive
-							    Reinforcement
-							    Training? <br />Please do not hesitate to
-							    <span><a class="inline--anchor" href="contact.html"> contact us</a></span>.
-							</p>
-					    </div>   
-					</div>
+					<div class="col-10 frame--info learn-more">
+						<p>
+							Would you like to know more about our instructors or about Positive
+							Reinforcement
+							Training? <br />Please do not hesitate to
+							<span><a class="inline--anchor" href="contact.html"> contact us</a></span>.
+						</p>
+					</div>   					
 				</div>
 			</section>
 		</div>
