--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						</a>
 						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
 							<a class="dropdown-item" href="#prt">Why K9Zen?</a>
-                            <hr />
+							<hr />
 							<a class="dropdown-item" href="training.html">What we offer</a>
 							<a class="dropdown-item" href="training.html#where">Where we train</a>
 							<a class="dropdown-item" href="training.html#when">Class timetable</a>
@@ -42,10 +42,10 @@
 					<li class="nav-item">
 						<a class="nav-link" href="about.html">About</a>
 					</li>
-				</ul>    
+				</ul>
 			</div>
 		</nav>
-        <!-- /Navbar -->
+		<!-- /Navbar -->
 	</header>
 	<main>
 		<div class="container-fluid hero-container">
@@ -61,39 +61,39 @@
 				</div>
 			</section>
 			<section class="container" id="prt">
-				<div class="row">
+				<div class="row justify-content-center frame--main prt-intro">
 					<div class="col-12">
-						<div class="prt-intro frame--main">
-							<h2>Why K9Zen?</h2>
-                            <div class="row justify-content-center">
-                                <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery1.jpg" alt="City break" title="City break"/>
-                                    <img src="assets/img/gallery2.jpg" alt="Sky's the limit" title="Sky's the limit"/>
-                                    <img src="assets/img/gallery3.jpg" alt="Forest quest" title="Forest quest"/>
-                                    <img src="assets/img/gallery4.jpg" alt="Following your lead" title="Following your lead"/>  
-                                </div> 
-                                <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery5.jpg" alt="Winter fun" title="Winter fun"/>   
-                                    <img src="assets/img/gallery6.jpg" alt="Everlasting love" title="Everlasting love"/>
-                                    <img src="assets/img/gallery7.jpg" alt="Together into the sunset" title="Together into the sunset"/>
-                                </div>   
-                                <div class="col-md-4 gallery">
-                                    <img src="assets/img/gallery8.jpg" alt="Best friends forever" title="Best friends forever"/>
-                                    <img src="assets/img/gallery9.jpg" alt="By your side" title="By your side"/>
-                                    <img src="assets/img/gallery10.jpg" alt="Snow sports" title="Snow sports"/>
-                                </div>                             
-                            </div>
-                            <div class="col-12">
-                                <p>
-                                    At K9Zen, we apply the <strong>Positive Reinforcement Training</strong> method. This means
-                                    that, instead of resorting to traditional "corrections" (punishment) to deter undesired dog
-                                    reactions, we rely
-                                    exclusively on positive motivation to induce desirable behaviour.
-                                </p>
-                                <p id="ethos">Put simply: we always want your dog to obey you out of desire, never out of fear.</p>
-								<span><a  class="btn btn-primary btn-lg btn-info" href="training.html" role="button">Let's train!</a></span>
-                            </div>
-						</div>
+						<h2>Why K9Zen?</h2>
+					</div>
+					<div class="col-md-4 gallery">
+						<img src="assets/img/gallery1.jpg" alt="City break" title="City break"/>
+						<img src="assets/img/gallery2.jpg" alt="Sky's the limit" title="Sky's the limit"/>
+						<img src="assets/img/gallery3.jpg" alt="Forest quest" title="Forest quest"/>
+						<img src="assets/img/gallery4.jpg" alt="Following your lead" title="Following your lead"/>
+                    </div>
+					<div class="col-md-4 gallery">
+						<img src="assets/img/gallery5.jpg" alt="Winter fun" title="Winter fun"/>
+						<img src="assets/img/gallery6.jpg" alt="Everlasting love" title="Everlasting love"/>
+						<img src="assets/img/gallery7.jpg" alt="Together into the sunset" title="Together into the sunset"/>
+                    </div>
+					<div class="col-md-4 gallery">
+						<img src="assets/img/gallery8.jpg" alt="Best friends forever" title="Best friends forever"/>
+						<img src="assets/img/gallery9.jpg" alt="By your side" title="By your side"/>
+						<img src="assets/img/gallery10.jpg" alt="Snow sports" title="Snow sports"/>
+                    </div>
+					<div class="col-12">
+						<p>
+							At K9Zen, we apply the <strong>Positive Reinforcement Training</strong> method.
+							This means
+							that, instead of resorting to traditional "corrections" (punishment) to deter
+							undesired dog
+							reactions, we rely exclusively on positive motivation to induce desirable
+							behaviour.
+						</p>
+						<p id="ethos">
+                            Put simply: we always want your dog to obey you out of desire, never out of fear.
+                        </p>
+						<span><a  class="btn btn-primary btn-lg btn-info" href="training.html" role="button">Let's train!</a></span>
 					</div>
 				</div>
 			</section>
