--- a/training.html
+++ b/training.html
@@ -49,53 +49,49 @@
 	</header>
 	<main>
 		<div class="container-fluid training-container">
-			<section class="container" id="offer">
-				<div class="row frame--main offer-frame">
+			<section class="container">
+				<div class="row justify-content-center frame--main offer-frame">
 					<div class="col-12 offer-header">
 						<h2>What we offer</h2>
 					</div>
-					<div class="row">
-						<div class="col-sm-12 col-md-6 col-lg-3 trg">
-							<h4><i class="far fa-thumbs-up"></i>Obedience Class</h4>
-							<p>
-								An essential course for any urban dog.
-							</p>
-							<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#obedienceModal">Read more</a></span>
-						</div>
-						<div class="col-sm-12 col-md-6 col-lg-3 trg">
-							<h4><i class="fas fa-magic"></i>Tricks Class</h4>
-							<p>
-								There is much more to tricks than just showing off.
-							</p>
-							<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#tricksModal">Read more</a></span>
-						</div>
-						<div class="col-sm-12 col-md-6 col-lg-3 trg">
-							<h4><i class="fas fa-paw"></i>Individual Training</h4>
-							<p>
-								Same curriculum as classes but more flexibility.
-							</p>
-							<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#individualModal">Read more</a></span>
-						</div>
-						<div class="col-sm-12 col-md-6 col-lg-3 trg">
-							<h4><i class="far fa-comments"></i>Consultation</h4>
-							<p>
-								When a particular issue requires additional focus.
-							</p>
-							<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#consultationModal">Read more</a></span>
-						</div>
-						<div class="row justify-content-center trg-more-info">
-							<div class="col-10">
-								<p class="frame--info">
-									Please check our <a class="inline--anchor" href="#where">location</a> and <a
-										class="inline--anchor" href="#when">timetable</a> sections for
-									details about our classes. For detailed
-									information about individual training or consultation, as well as for any other
-									question you might have, please do not hesitate to <a class="inline--anchor"
-										href="contact.html">contact
-										us</a>.<span id="where">&nbsp;</span>
-								</p>
-							</div>
-						</div>
+					<div class="col-sm-12 col-md-6 col-lg-3 trg">
+						<h4><i class="far fa-thumbs-up"></i>Obedience Class</h4>
+						<p>
+						    An essential course for any urban dog.
+						</p>
+						<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#obedienceModal">Read more</a></span>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3 trg">
+						<h4><i class="fas fa-magic"></i>Tricks Class</h4>
+						<p>
+							There is much more to tricks than just showing off.
+						</p>
+						<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#tricksModal">Read more</a></span>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3 trg">
+						<h4><i class="fas fa-paw"></i>Individual Training</h4>
+						<p>
+							Same curriculum as classes but more flexibility.
+						</p>
+						<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#individualModal">Read more</a></span>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3 trg">
+						<h4><i class="far fa-comments"></i>Consultation</h4>
+						<p>
+							When a particular issue requires additional focus.
+						</p>
+						<span class="read--more"><a href="#" class="inline--anchor" data-toggle="modal" data-target="#consultationModal">Read more</a></span>
+					</div>
+					<div class="col-10 trg-more-info">
+						<p class="frame--info">
+							Please check our <a class="inline--anchor" href="#where">location</a> and <a
+							class="inline--anchor" href="#when">timetable</a> sections for
+							details about our classes. For detailed
+							information about individual training or consultation, as well as for any other
+							question you might have, please do not hesitate to <a class="inline--anchor"
+							href="contact.html">contact
+							us</a>.<span id="where">&nbsp;</span>
+						</p>
 					</div>
 				</div>
 			</section>
@@ -112,9 +108,9 @@
 							crowds
 							of people, our training ground provides an ideal location for all your training
 							needs.<br />
-                                Public transportation nearby.<br />
-                                Private parking space available.
-							<p>
+                            Public transportation nearby.<br />
+                            Private parking space available.
+						<p>
 					</div>
 					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
 						<iframe
