--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
 						<h2>Contact us</h2>
 					</div>
 					<div class="col-12 col-md-4">
-						<div class="row justify-content-center contact-frame">
+						<div class="row justify-content-center">
 							<div class="btn--outer-frame">
 								<a href="#" data-toggle="modal" data-target="#visitModal">
 									<div class="btn--button">
