fixed containers; code cleanup

--- a/about.html
+++ b/about.html
@@ -45,10 +45,11 @@
 				</ul>
 			</div>
 		</nav>
-		<!-- /Navbar -->
+		<!-- /.navbar -->
 	</header>
 	<main>
-		<div class="container-fluid about-container">
+		<div class="about-background">
+            <!-- Instructor Biographies -->
 			<section class="container">
 				<div class="row justify-content-center frame--main about-us">
 					<div class="col-12 about-heading">
@@ -105,6 +106,7 @@
 					</div>   					
 				</div>
 			</section>
+            <!-- /.instructor biographies -->
 		</div>
 	</main>
 	<footer class="container-fluid footer-bar">
