--- a/contact.html
+++ b/contact.html
@@ -45,10 +45,11 @@
 				</ul>                
 			</div>
 		</nav>
-        <!-- /Navbar -->
+        <!-- /.navbar -->
 	</header>
 	<main>
-		<div class="container-fluid contact-container">
+		<div class="contact-background">
+            <!-- Contact Buttons -->
 			<section class="container">
 				<div class="row justify-content-center frame--main contact-options">
 					<div class="col-12 contact-header">
@@ -67,7 +68,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
-						<div class="row justify-content-center contact-frame">
+						<div class="row justify-content-center">
 							<div class="btn--outer-frame">
 								<a href="#" data-toggle="modal" data-target="#callModal">
 									<div class="btn--button">
@@ -79,7 +80,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-md-4">
-						<div class="row justify-content-center contact-frame">
+						<div class="row justify-content-center">
 							<div class="btn--outer-frame">
 								<a href="#" data-toggle="modal" data-target="#messageModal">
 									<div class="btn--button">
@@ -92,6 +93,7 @@
 					</div>
 				</div>
 			</section>
+            <!-- /.contact buttons -->
 		</div>
 	</main>
 
@@ -128,8 +130,8 @@
 				</div>
 				<div class="modal-body custom--modal-body">
 					You are most welcome to visit us during any of our training classes. Please check our <a
-						class="modal--link inline--anchor" href="training.html#where">training location</a> and <a
-						class="modal--link inline--anchor" href="training.html#when">class timetable</a> for details.
+						class="inline--anchor" href="training.html#where">training location</a> and <a
+						class="inline--anchor" href="training.html#when">class timetable</a> for details.
 				</div>
 				<div class="modal-footer">
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -174,7 +176,7 @@
 			</div>
 		</div>
 	</div>
-    <!-- / Modals  -->
+    <!-- /.modals  -->
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
