--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 				</ul>
 			</div>
 		</nav>
-		<!-- /Navbar -->
+        <!-- /.navbar -->
 	</header>
 	<main>
-		<div class="container-fluid hero-container">
+		<div class="hero-background">
+            <!-- Callout -->
 			<section class="container jumbotron-container">
 				<div class="row">
 					<div class="col-12">
@@ -60,6 +61,8 @@
 					</div>
 				</div>
 			</section>
+            <!-- /.callout -->
+            <!-- Gallery & Ethos -->
 			<section class="container" id="prt">
 				<div class="row justify-content-center frame--main prt-intro">
 					<div class="col-12">
@@ -97,6 +100,7 @@
 					</div>
 				</div>
 			</section>
+            <!-- /.gallery & ethos -->
 		</div>
 	</main>
 	<footer class="container-fluid footer-bar">
