--- a/training.html
+++ b/training.html
@@ -45,10 +45,11 @@
 				</ul>
 			</div>
 		</nav>
-		<!-- /Navbar-->
+		<!-- /.navbar-->
 	</header>
 	<main>
-		<div class="container-fluid training-container">
+		<div class="training-background">
+            <!-- Training types -->
 			<section class="container">
 				<div class="row justify-content-center frame--main offer-frame">
 					<div class="col-12 offer-header">
@@ -90,12 +91,14 @@
 							information about individual training or consultation, as well as for any other
 							question you might have, please do not hesitate to <a class="inline--anchor"
 							href="contact.html">contact
-							us</a>.<span id="where">&nbsp;</span>
+							us</a>.
 						</p>
 					</div>
 				</div>
 			</section>
-			<section class="container">
+            <!-- /.training types -->
+            <!-- Location & Map -->
+			<section class="container" id="where">
 				<div class="row frame--main location">
 					<div class="col-12 location-header">
 						<h2>Where we train</h2>
@@ -115,16 +118,18 @@
 					<div class="col-md-8 embed-responsive embed-responsive-16by9 location-map">
 						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2780.9267725687564!2d15.975725015775517!3d45.812724918140326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4765d6fdd9101e27%3A0xb058b7bb640effe3!2sTrg%20bana%20Josipa%20Jela%C4%8Di%C4%87a%2045%2C%2010000%2C%20Zagreb!5e0!3m2!1sen!2shr!4v1575314824458!5m2!1sen!2shr"
-							width="600" height="450" style="border:0;" allowfullscreen=""></iframe><span id="when">&nbsp;</span>
+							width="600" height="450" style="border:0;" allowfullscreen=""></iframe>
 					</div>
 				</div>
 			</section>
-			<section class="container">
+            <!-- /.location & map -->
+            <!-- Timetable -->
+			<section class="container" id="when">
 				<div class="row justify-content-center frame--main timetable">
 					<div class="col-12 timetable-header">
 						<h2>Class Timetable</h2>
 					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day frame--info">
+					<div class="col-12 col-md-4 col-lg-2 frame--info timetable-day">
 						<h4>Monday</h4>
 						<p>17:00-18:30</p>
 						<h5>Obedience group 1</h5>
@@ -132,7 +137,7 @@
 						<p>19:00-20:30</p>
 						<h5>Tricks group 1</h5>
 					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day frame--info">
+					<div class="col-12 col-md-4 col-lg-2 frame--info timetable-day">
 						<h4>Tuesday</h4>
 						<p>16:00-17:30</p>
 						<h5>Tricks group 2</h5>
@@ -140,7 +145,7 @@
 						<p>18:00-19:30</p>
 						<h5>Obedience group 2</h5>
 					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day frame--info">
+					<div class="col-12 col-md-4 col-lg-2 frame--info timetable-day">
 						<h4>Thursday</h4>
 						<p>17:00-18:30</p>
 						<h5>Obedience group 1</h5>
@@ -148,7 +153,7 @@
 						<p>19:00-20:30</p>
 						<h5>Tricks group 1</h5>
 					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day frame--info">
+					<div class="col-12 col-md-4 col-lg-2 frame--info timetable-day">
 						<h4>Friday</h4>
 						<p>16:00-17:30</p>
 						<h5>Tricks group 2</h5>
@@ -156,7 +161,7 @@
 						<p>18:00-19:30</p>
 						<h5>Obedience group 2</h5>
 					</div>
-					<div class="col-12 col-md-4 col-lg-2 timetable-day frame--info">
+					<div class="col-12 col-md-4 col-lg-2 frame--info timetable-day">
 						<h4>Saturday</h4>
 						<p>10:00-11:15</p>
 						<h5>Obedience - <em>spare</em></h5>
@@ -176,6 +181,7 @@
 					</div>
 				</div>
 			</section>
+            <!-- /.timetable -->
 		</div>
 	</main>
 	<!-- Modals - code copied from Bootstrap documentation and adapted -->
@@ -280,7 +286,7 @@
 			</div>
 		</div>
 	</div>
-	<!-- /Modals -->
+	<!-- /.modals -->
 	<footer class="container-fluid footer-bar">
 		<div class="row">
 			<div class="col">
