fixed typo; styling microadjustments

--- a/about.html
+++ b/about.html
@@ -72,7 +72,7 @@
 								21st-century update"</em> (Montreal, 2011) as well as the international conference
 								<em>"Impact of training atmosphere
 								on dog-owner relationship"</em> (Sydney, 2014).<br /><br />
-                                Jane is a proud owner of a lab named Skip and a mixed-breed called Bella.
+                                Jane is a proud owner of a Lab named Skip and a mixed-breed called Bella.
 								<p>
 						</div>
 					</div>
